시맨틱태그와 상대단위 사용 업데이트

--- a/frontend-mentor/qr-code-component/app.css
+++ b/frontend-mentor/qr-code-component/app.css
@@ -10,28 +10,25 @@ body {
 
 .card {
     background-color: hsl(0, 0%, 100%);
-    border-radius: 20px;
-    padding: 20px;
-    width: 320px;
+    border-radius: 1.25rem;
+    padding: 1.25rem;
+    width: 20rem;
     text-align: center;
-    /*justify-content: center;*/
 }
 
 img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
-    display: block;
-    margin: 0 auto;
+    border-radius: 0.625rem;
 }
 
 .improve {
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: 700;
 }
 
 .scan {
-    font-size: 15px;
+    font-size: 0.9rem;
     font-weight: 400;
     color: hsl(216, 15%, 48%)
 }
